# tendie-factory

./: Cargo.toml  Dockerfile  README.md
core/: Cargo.toml
core/src/: main.rs  metrics.rs  nasdaq_screener.csv  nlp.rs  reddit.rs  tickers.rs
core/src/metrics/: nlp.rs
src/: companylist.csv  main.rs  nlp.rs
web/: build.sh  build_styles.sh
web/front_end/: index.html
web/public/: index.html  results.json
web/server/: Cargo.toml  README.md  build_styles.sh  portfolio.json
web/server/src/: main.rs
web/server/templates/: index.html  stock-card.html
