[package]
name = "tendie-factory"
version = "0.1.0"
authors = ["millsky <kyle83567@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
twoway = { version = "0.2.1" }
csv = "1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
