[package]
name = "tendie-factory"
version = "0.1.0"
authors = ["millsky <kyle83567@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
dashmap = { version = "4.0.2", features = ["serde"] }
rust-bert = { version = "0.12.1" }
once_cell = "1.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }