[package]
name = "server"
version = "0.1.0"
authors = ["Kyle Mills <kyle83567@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }